...
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_dic"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/searchEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

...
        app:layout_constraintBottom_toTopOf="@+id/quote_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <ImageView
        android:id="@+id/searchButton"
        android:layout_width="42dp"
        android:layout_height="46dp"
        android:src="@drawable/search_icon_dic_paja"
        app:layout_constraintStart_toEndOf="@+id/searchEditText"
        app:layout_constraintTop_toTopOf="@+id/searchEditText"
        app:layout_constraintBottom_toBottomOf="@+id/searchEditText"
...
