...
    <string name="famous_quote_dic">Words, like nature, half reveal and half conceal the soul within</string>
    <string name="tool_search_result">Your Search Result</string>
    <string name="save_term_dic">Save Word</string>
    <string name="view_term_dic">View Saved Words</string>
    <string name="tool_saved_dic">Saved Words</string>
    <string name="delete_saved_dic">Delete</string>
    <string name="help_title_dic">Help</string>
    <string name="help_message_dic">Instructions for using the interface:\n\n1. Enter a word to search in the provided field.\n2. Click on the search button to retrieve definitions and you can also save the word.\n3. Click on view saved words button to see saved words, tap on saved words for more info and for deletion.</string>
    <string name="ok_button_text_dic">OK</string>

    <!--sunrise's string-->
    <string name="sunSeeker">SunSeeker</string>
    <string name="view_favorites_button">Show Favorite list</string>
    <string name="switchText">Enter Lat and Lon : </string>
...
