...
            android:layout_marginTop="5dp"
            android:backgroundTint="#41729F"
            android:text="@string/recipe_search"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/buttonFavorites"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@id/searchRecipeButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:backgroundTint="#EA6D35"
...
