...
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintVertical_bias="1.0"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginBottom="16dp" />-->

    <Button
        android:id="@+id/backButton"
        android:layout_width="133dp"
        android:layout_height="108dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="630dp"
        android:background="@android:color/transparent"
        android:text="←"
...
